# StaticNet

./: CMakeLists.txt  README.md  test.cpp
StaticNet/: CMakeLists.txt
StaticNet/include/: activation.h  backward_prop.h  forward_prop.h  loss.h  matrix.h  neural_net.h  optimize.h  propagation_data.h  util.h
StaticNet/src/: matrix.cpp  util.cpp
examples/mnist/: CMakeLists.txt  mnist.cpp  mnist_reader.cpp  mnist_reader.h
